--- a/falco/falco.yaml
+++ b/falco/falco.yaml
@@ -2,12 +2,12 @@ rules_file:
  - /etc/falco/falco_rules.yaml
 
 # Whether to output events in json or text
-json_output: false
-
+json_output: true
 # When using json output, whether or not to include the "output" property
 # itself (e.g. "File below a known binary directory opened for writing
 # (user=root ....") in the json output.
 json_include_output_property: true
+buffered_outputs: false 
 
 # Send information logs to stderr and/or syslog Note these are *not* security
 # notification logs! These are just Falco lifecycle (and possibly error) logs.
